--- a/views/preferences.pug
+++ b/views/preferences.pug
@@ -7,12 +7,12 @@ block content
     .row.mt-5
         .col-md-6.m-auto
             .card.card-body
-                h1.text-center.mb-2 Choose Site to be Notified for
+                h4.text-center.mb-2 Choose Site to be Notified for
                 include ./partials/messages
                 form(action='/users/preferences', method='POST')
-                    select.form-group#sel(name="siteSelection" onchange="show(this)") Select Site
-                        option.form-control(value="") >-- Select --<
-                    button.btn.btn-primary.btn-block(type='submit')
+                    select.form-group.col-md-4.form-control#sel(name="siteSelection" onchange="show(this)") Select Site
+                        option.form-control.text-secondary(value="") Choose...
+                    button.form-group.col-md-4.btn.btn-primary.btn-block(type='submit')
                         | Submit
 
     p#msg
