--- a/views/login.pug
+++ b/views/login.pug
@@ -13,7 +13,7 @@ block content
             .form-group
                 label(for='password') Password
                 input#password.form-control(type='password', name='password', placeholder='Enter Password')
-            button.btn.btn-primary.btn-block(type='submit') Login
+            button.btn.btn-block.btn-primary(type='submit', style={'background-color':'#b8daff', 'font-size':'120%', 'color':'black'}) Login
         p.lead.mt-4
             | No Account?
             |
