--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,6 +4,7 @@ html
   head
     title Inhalert
     link(rel='stylesheet', href='/stylesheets/literia.css')
+    //link(href='/vendor/bootstrap/css/bootstrap.min.css', rel='stylesheet')
     script(src="https://kit.fontawesome.com/ef21edb9eb.js", crossorigin="anonymous")
     block extraHeader
   body
