--- a/views/register.pug
+++ b/views/register.pug
@@ -19,7 +19,7 @@ block content
             .form-group
                 label(for='password2') Confirm Password
                 input#password2.form-control(type='password', name='password2', placeholder='Confirm Password', value= (typeof password2 != 'undefined') ? password2 : '')
-            button.btn.btn-primary.btn-block(type='submit')
+            button.btn.btn-primary.btn-block(type='submit', style={'background-color':'#b8daff', 'font-size':'120%', 'color':'black'})
                 | Register
         p.lead.mt-4
             | Have An Account?
