Added refresh button

--- a/views/index.pug
+++ b/views/index.pug
@@ -54,8 +54,8 @@ html(lang='en')
             tr
               th(scope='col') Site
               th(scope='col') Air Quality Status
-          tbody
         a#loadmore.btn.btn-light(onclick='loadMoreButton()')  Show More
+        button.btn.btn-light(onclick='getSiteSummary()') Refresh
     // Image Showcases
     section.showcase
       .container-fluid.p-0
