Updated db to now change status of camera sites to Camera

--- a/views/preferences.pug
+++ b/views/preferences.pug
@@ -4,16 +4,14 @@ block extraHeader
     script(type='text/javascript' src="/static/sites.js")
 
 block content
-    .row.mt-5
-        .col-md-6.m-auto
-            .card.card-body
-                h4.text-center.mb-2 Choose Site to be Notified for
-                include ./partials/messages
-                form(action='/users/preferences', method='POST')
-                    select.form-group.col-md-4.form-control#sel(name="siteSelection" onchange="show(this)") Select Site
-                        option.form-control.text-secondary(value="") Choose...
-                    button.form-group.col-md-4.btn.btn-primary.btn-block(type='submit')
-                        | Submit
+    .card.card-body
+        h4.text-center.mb-2 Choose Site to be Notified for
+        include ./partials/messages
+        form(action='/users/preferences', method='POST')
+            select.form-group.form-control#sel(name="siteSelection" onchange="show(this)") Select Site
+                option.form-control.text-secondary(value="") Choose...
+            button.form-group.btn.btn-primary.btn-block(type='submit', style={'background-color':'#b8daff', 'font-size':'120%', 'color':'black'})
+                | Submit
 
     p#msg
     script(type = 'text/javascript').
