--- a/views/index.pug
+++ b/views/index.pug
@@ -17,6 +17,8 @@ html(lang='en')
     link(href='https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic', rel='stylesheet', type='text/css')
     // Custom styles for this template
     link(href='/css/landing-page.min.css', rel='stylesheet')
+    script(type = 'text/javascript').
+      getSiteSummary();
   body#page-top
     nav#mainNav.navbar.navbar-expand-sm.bg-light.navbar-light.justify-content-end.fixed-top
       a.mr-auto.mr-1.navbar-brand.js-scroll-trigger(href='#page-top') Inhalert
@@ -43,8 +45,6 @@ html(lang='en')
                   button.btn.btn-block.btn-lg.text-black(type='button',style={'background-color':'#b8daff'}, onclick='convert_postcode()') Show me!
     // Icons Grid
     section.features-icons.bg-light.text-center
-      script(type = 'text/javascript').
-        $(document).ready(getSiteSummary());
       .container
         h3 Live Air Quality Report for Victoria
         p.lead.mb-0 Click on site name to load scientific summary
