--- a/views/index.pug
+++ b/views/index.pug
@@ -8,7 +8,7 @@ html(lang='en')
     meta(name='viewport', content='width=device-width, initial-scale=1, shrink-to-fit=no')
     meta(name='description', content='')
     meta(name='author', content='')
-    title Landing Page - Start Bootstrap Theme
+    title Inhalert
     // Bootstrap core CSS
     link(href='/vendor/bootstrap/css/bootstrap.min.css', rel='stylesheet')
     // Custom fonts for this template
