Added comments and cleaned up for submission

--- a/public/css/landing-page.css
+++ b/public/css/landing-page.css
@@ -4,6 +4,8 @@
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-landing-page/blob/master/LICENSE)
  */
 
+/* CUSTOM ADDITIONS AT THE BOTTOM */
+
 body {
   font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
@@ -124,6 +126,9 @@ footer.footer {
   padding-top: 4rem;
   padding-bottom: 4rem;
 }
+
+
+/* CUSTOM EDITS */
 
 .status_cell {
   margin-top: 8px;
