--- a/views/index.pug
+++ b/views/index.pug
@@ -120,29 +120,29 @@ html(lang='en')
           .col-lg-6.h-100.text-center.text-lg-left.my-auto
             ul.list-inline.mb-2
               li.list-inline-item
-                a(href='#') About
+                a(href='#page-top') About
               li.list-inline-item ⋅
               li.list-inline-item
-                a(href='#') Contact
+                a(href='#page-top') Contact
               li.list-inline-item ⋅
               li.list-inline-item
-                a(href='#') Terms of Use
+                a(href='#page-top') Terms of Use
               li.list-inline-item ⋅
               li.list-inline-item
-                a(href='#') Privacy Policy
-            p.text-muted.small.mb-4.mb-lg-0 © Your Website 2019. All Rights Reserved.
+                a(href='#page-top') Privacy Policy
+            p.text-muted.small.mb-4.mb-lg-0 These buttons are currently just placeholders
           .col-lg-6.h-100.text-center.text-lg-right.my-auto
             ul.list-inline.mb-0
               li.list-inline-item.mr-3
-                a(href='#')
+                a(href='#page-top')
                   i.fab.fa-facebook.fa-2x.fa-fw
               li.list-inline-item.mr-3
-                a(href='#')
+                a(href='#page-top')
                   i.fab.fa-twitter-square.fa-2x.fa-fw
               li.list-inline-item
-                a(href='#')
+                a(href='#page-top')
                   i.fab.fa-instagram.fa-2x.fa-fw
-    // Bootstrap core JavaScript
+    //Bootstrap core JavaScript
     script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js")
     script(src='/vendor/jquery/jquery.min.js')
     script(src='vendor/jquery-easing/jquery.easing.min.js')
