--- a/views/summary.pug
+++ b/views/summary.pug
@@ -134,55 +134,9 @@ html(lang='en')
                         h3 What does each category mean?
                         p.lead
                             | See more on our
-                            a.d-inline(href='/dashboard/about')  About page
+                            a.d-inline(href='/dashboard')  About page
                             |.
-                //.row.no-gutters
-                //  .col-lg-6.text-white.showcase-img(style="background-image: url('/img/bg-showcase-2.jpg');")
-                //  .col-lg-6.my-auto.showcase-text
-                //    h2 Updated For Bootstrap 4
-                //    p.lead.mb-0
-                //      | Newly improved, and full of great utility classes, Bootstrap 4 is leading the way in mobile responsive web development! All of the themes on Start Bootstrap are now using Bootstrap 4!
-                //.row.no-gutters
-                //  .col-lg-6.order-lg-2.text-white.showcase-img(style="background-image: url('/img/bg-showcase-3.jpg');")
-                //  .col-lg-6.order-lg-1.my-auto.showcase-text
-                //    h2 Easy to Use & Customize
-                //    p.lead.mb-0
-                //      | Landing Page is just HTML and CSS with a splash of SCSS for users who demand some deeper customization options. Out of the box, just add your content and images, and your new landing page will be ready to go!
-        //// Testimonials
-        //section.testimonials.text-center.bg-light
-        //  .container
-        //    h2.mb-5 What people are saying...
-        //    .row
-        //      .col-lg-4
-        //        .testimonial-item.mx-auto.mb-5.mb-lg-0
-        //          img.img-fluid.rounded-circle.mb-3(src='/img/testimonials-1.jpg', alt='')
-        //          h5 Margaret E.
-        //          p.font-weight-light.mb-0 "This is fantastic! Thanks so much guys!"
-        //      .col-lg-4
-        //        .testimonial-item.mx-auto.mb-5.mb-lg-0
-        //          img.img-fluid.rounded-circle.mb-3(src='/img/testimonials-2.jpg', alt='')
-        //          h5 Fred S.
-        //          p.font-weight-light.mb-0
-        //            | "Bootstrap is amazing. I've been using it to create lots of super nice landing pages."
-        //      .col-lg-4
-        //        .testimonial-item.mx-auto.mb-5.mb-lg-0
-        //          img.img-fluid.rounded-circle.mb-3(src='/img/testimonials-3.jpg', alt='')
-        //          h5 Sarah W.
-        //          p.font-weight-light.mb-0 "Thanks so much for making these free resources available to us!"
-        //// Call to Action
-        //section.call-to-action.text-white.text-center
-        //  .overlay
-        //  .container
-        //    .row
-        //      .col-xl-9.mx-auto
-        //        h2.mb-4 Ready to get started? Sign up now!
-        //      .col-md-10.col-lg-8.col-xl-7.mx-auto
-        //        form
-        //          .form-row
-        //            .col-12.col-md-9.mb-2.mb-md-0
-        //              input.form-control.form-control-lg(type='email', placeholder='Enter your email...')
-        //            .col-12.col-md-3
-        //              button.btn.btn-block.btn-lg.btn-primary(type='submit') Sign up!
+
         // Footer
         footer.footer.bg-light
             .container
@@ -190,27 +144,27 @@ html(lang='en')
                     .col-lg-6.h-100.text-center.text-lg-left.my-auto
                         ul.list-inline.mb-2
                             li.list-inline-item
-                                a(href='#') About
+                                a(href='#page-top') About
                             li.list-inline-item ⋅
                             li.list-inline-item
-                                a(href='#') Contact
+                                a(href='#page-top') Contact
                             li.list-inline-item ⋅
                             li.list-inline-item
-                                a(href='#') Terms of Use
+                                a(href='#page-top') Terms of Use
                             li.list-inline-item ⋅
                             li.list-inline-item
-                                a(href='#') Privacy Policy
-                        p.text-muted.small.mb-4.mb-lg-0 © Your Website 2019. All Rights Reserved.
+                                a(href='#page-top') Privacy Policy
+                        p.text-muted.small.mb-4.mb-lg-0 These buttons are currently just placeholders
                     .col-lg-6.h-100.text-center.text-lg-right.my-auto
                         ul.list-inline.mb-0
                             li.list-inline-item.mr-3
-                                a(href='#')
+                                a(href='#page-top')
                                     i.fab.fa-facebook.fa-2x.fa-fw
                             li.list-inline-item.mr-3
-                                a(href='#')
+                                a(href='#page-top')
                                     i.fab.fa-twitter-square.fa-2x.fa-fw
                             li.list-inline-item
-                                a(href='#')
+                                a(href='#page-top')
                                     i.fab.fa-instagram.fa-2x.fa-fw
         // Bootstrap core JavaScript
         script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js")
