--- a/views/index.pug
+++ b/views/index.pug
@@ -38,19 +38,19 @@ html(lang='en')
       .container
         row
           .col-xl-9.mx-auto
-            h1.mb-5 Get a live Air Quality report for your area!
+            h1.mb-5(style={color:'#495057'}) Get a live Air Quality report for your area!
             include ./partials/messages
           .col-md-10.col-lg-8.col-xl-7.mx-auto
             form
               .form-row
                 .col-12.col-md-9.mb-2.mb-md-0
-                  input#whatsup.form-control.form-control-lg(type='text', placeholder='Enter your postcode...')
+                  input#whatsup.form-control.form-control-md(type='text', placeholder='Enter your postcode...')
                 .col-12.col-md-3
-                  button.btn.btn-block.btn-lg.text-black(type='button',style={'background-color':'#b8daff'}, onclick='convert_postcode()') Show me!
+                  button.btn.btn-block.btn-md.text-black(type='button',style={'background-color':'#b8daff'}, onclick='convert_postcode()') Show me!
     // Icons Grid
     section.features-icons.bg-light.text-center
       .container
-        h3 Live Air Quality Report for Victoria
+        h3(style={color:'#495057'}) Live Air Quality Report for Victoria
         p.lead.mb-0 Click on site name to load scientific summary
         br
         table.table.table-bordered#summaryTable
@@ -64,59 +64,12 @@ html(lang='en')
     section.showcase
       .container-fluid.p-0
         .row.no-gutters
-          .col-lg-6.order-lg-2.text-white.showcase-img(style="background-image: url('/img/clouds.jpg');")
+          .col-lg-6.order-lg-2.text-white.showcase-img(style="background-image: url('/img/marc-wieland-zrj-TPjcRLA-unsplash.jpg');")
           .col-lg-6.order-lg-1.my-auto.showcase-text
-            h2 Register to receive alerts
+            h2(style={color:'#495057'}) Register to receive alerts
             p.lead.mb-0
               | Inhalert is a Victorian air quality alert app, sending you notifications when the air quality in your local area
               | drops below recommended levels
-        //.row.no-gutters
-        //  .col-lg-6.text-white.showcase-img(style="background-image: url('/img/bg-showcase-2.jpg');")
-        //  .col-lg-6.my-auto.showcase-text
-        //    h2 Updated For Bootstrap 4
-        //    p.lead.mb-0
-        //      | Newly improved, and full of great utility classes, Bootstrap 4 is leading the way in mobile responsive web development! All of the themes on Start Bootstrap are now using Bootstrap 4!
-        //.row.no-gutters
-        //  .col-lg-6.order-lg-2.text-white.showcase-img(style="background-image: url('/img/bg-showcase-3.jpg');")
-        //  .col-lg-6.order-lg-1.my-auto.showcase-text
-        //    h2 Easy to Use & Customize
-        //    p.lead.mb-0
-        //      | Landing Page is just HTML and CSS with a splash of SCSS for users who demand some deeper customization options. Out of the box, just add your content and images, and your new landing page will be ready to go!
-    //// Testimonials
-    //section.testimonials.text-center.bg-light
-    //  .container
-    //    h2.mb-5 What people are saying...
-    //    .row
-    //      .col-lg-4
-    //        .testimonial-item.mx-auto.mb-5.mb-lg-0
-    //          img.img-fluid.rounded-circle.mb-3(src='/img/testimonials-1.jpg', alt='')
-    //          h5 Margaret E.
-    //          p.font-weight-light.mb-0 "This is fantastic! Thanks so much guys!"
-    //      .col-lg-4
-    //        .testimonial-item.mx-auto.mb-5.mb-lg-0
-    //          img.img-fluid.rounded-circle.mb-3(src='/img/testimonials-2.jpg', alt='')
-    //          h5 Fred S.
-    //          p.font-weight-light.mb-0
-    //            | "Bootstrap is amazing. I've been using it to create lots of super nice landing pages."
-    //      .col-lg-4
-    //        .testimonial-item.mx-auto.mb-5.mb-lg-0
-    //          img.img-fluid.rounded-circle.mb-3(src='/img/testimonials-3.jpg', alt='')
-    //          h5 Sarah W.
-    //          p.font-weight-light.mb-0 "Thanks so much for making these free resources available to us!"
-    //// Call to Action
-    //section.call-to-action.text-white.text-center
-    //  .overlay
-    //  .container
-    //    .row
-    //      .col-xl-9.mx-auto
-    //        h2.mb-4 Ready to get started? Sign up now!
-    //      .col-md-10.col-lg-8.col-xl-7.mx-auto
-    //        form
-    //          .form-row
-    //            .col-12.col-md-9.mb-2.mb-md-0
-    //              input.form-control.form-control-lg(type='email', placeholder='Enter your email...')
-    //            .col-12.col-md-3
-    //              button.btn.btn-block.btn-lg.btn-primary(type='submit') Sign up!
 
     // Footer
     footer.footer.bg-light
