--- a/views/summary.pug
+++ b/views/summary.pug
@@ -2,7 +2,6 @@ doctype html
 html(lang='en')
     head
         script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js")
-        script(type='text/javascript' src="/static/new_forecast.js")
         script(type='text/javascript' src="/static/site_summary.js")
         script(type='text/javascript' src="/static/convert_postcode.js")
         script(type='text/javascript' src="/static/display_summary.js")
@@ -33,23 +32,22 @@ html(lang='en')
             .container
                 .row
                     .col-xl-8.mx-auto
-                        h3.mb-5 Enter your postcode to get summary closest to you!
+                        h3.mb-3(style={color:'#495057'}) Enter your postcode to get summary closest to you!
                         include ./partials/messages
                     .col-md-10.col-lg-8.col-xl-7.mx-auto
                         form
                             .form-row
                                 .col-12.col-md-9.mb-2.mb-md-0
-                                    input#whatsup.form-control.form-control-lg(type='text', placeholder='Enter your postcode...')
+                                    input#whatsup.form-control.form-control-md(type='text', placeholder='Enter your postcode...')
                                 .col-12.col-md-3
-                                    button.btn.btn-block.btn-lg.text-black(type='button', style={'background-color':'#b8daff'}, onclick='convert_postcode()') Show me!
+                                    button.btn.btn-block.btn-md.text-black(type='button', style={'background-color':'#b8daff'}, onclick='convert_postcode()') Show me!
         // Icons Grid
         section.features-icons.bg-light.text-center
             script(type = 'text/javascript').
                 $(document).ready(displaySummary());
             .container
                 if summary
-                    h3 Air Quality Report for #{summary.siteName}
-                    h6 Click on site name to load scientific summary
+                    h3(style={color:'#495057'}) Air Quality Report for #{summary.siteName}
                     br
                     #accordion
                         .card
@@ -57,7 +55,7 @@ html(lang='en')
                                 h5.mb-0
                                     a(role='button', data-toggle='collapse', href='#collapse-3', aria-expanded='true', aria-controls='collapse-3')
                                         | Site Details
-                            #collapse-3.collapse.show(data-parent='#accordion', aria-labelledby='heading-3')
+                            #collapse-3.collapse.show(aria-labelledby='heading-3')
                                 ul.list-group
                                     li.list-group-item
                                         | !{'<strong> Site Name: </strong>'} #{summary.siteName}
@@ -69,7 +67,7 @@ html(lang='en')
                                     h5.mb-0
                                         a(role='button', data-toggle='collapse', href='#collapse-2', aria-expanded='true', aria-controls='collapse-2')
                                             | Health Advice
-                                #collapse-2.collapse.show(data-parent='#accordion', aria-labelledby='heading-2')
+                                #collapse-2.collapse.show(aria-labelledby='heading-2')
                                     ul.list-group
                                         - var kolor = (summary.siteHealthAdvices[0].healthAdviceColor ? summary.siteHealthAdvices[0].healthAdviceColor : 'grey')
                                         li.list-group-item(style={'color': kolor, 'font-weight': 'bold'}) #{summary.siteHealthAdvices[0].healthAdvice ? summary.siteHealthAdvices[0].healthAdvice : "Unavailable"}
@@ -84,7 +82,7 @@ html(lang='en')
                                     h5.mb-0
                                         a.collapsed(role='button', data-toggle='collapse', href='#collapse-1', aria-expanded='false', aria-controls='collapse-1')
                                             | Parameters
-                                #collapse-1.collapse(data-parent='#accordion', aria-labelledby='heading-1')
+                                #collapse-1.collapse(aria-labelledby='heading-1')
                                     .card-body
                                         #accordion-1
                                             each val, index in summary.parameters
@@ -93,7 +91,7 @@ html(lang='en')
                                                         h5.mb-0
                                                             a.collapsed(role='button', data-toggle='collapse', href='#collapse-1-' + (index + 1), aria-expanded='false', aria-controls='collapse-1-' + (index + 1))
                                                                 | #{val.name}
-                                                    .collapse(data-parent='#accordion-1', aria-labelledby='heading-1-' + (index + 1), id='collapse-1-' + (index + 1))
+                                                    .collapse(aria-labelledby='heading-1-' + (index + 1), id='collapse-1-' + (index + 1))
                                                         ul.list-group
                                                             - var kolor = (val.timeSeriesReadings[0].readings[0].healthAdviceColor ? val.timeSeriesReadings[0].readings[0].healthAdviceColor : (val.timeSeriesReadings[1] ? (val.timeSeriesReadings[1].readings[0].healthAdviceColor ? val.timeSeriesReadings[1].readings[0].healthAdviceColor : "grey") : "grey"))
                                                             li.list-group-item(style={
@@ -111,7 +109,7 @@ html(lang='en')
                                     h5.mb-0
                                         a.collapsed(role='button', data-toggle='collapse', href='#collapse-4', aria-expanded='false', aria-controls='collapse-4')
                                             | Camera URL's
-                                #collapse-4.collapse(data-parent='#accordion', aria-labelledby='heading-4')
+                                #collapse-4.collapse(aria-labelledby='heading-4')
                                     ul.list-group
                                         - var camURL = (summary.cameraImageURL ? summary.cameraImageURL: "Unavailable")
                                         - var tlURL = (summary.timeLapseURL ? summary.timeLapseURL: "Unavailable")
@@ -129,7 +127,7 @@ html(lang='en')
         section.showcase
             .container-fluid.p-0
                 .row.no-gutters
-                    .col-lg-6.order-lg-2.text-white.showcase-img(style="background-image: url('/img/clouds.jpg');")
+                    .col-lg-6.order-lg-2.text-white.showcase-img(style="background-image: url('/img/asya-tes-fX2vya_eKK8-unsplash.jpg');")
                     .col-lg-6.order-lg-1.my-auto.showcase-text
                         h3 What does each category mean?
                         p.lead
@@ -169,7 +167,5 @@ html(lang='en')
         // Bootstrap core JavaScript
         script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js")
         script(src='/vendor/jquery/jquery.min.js')
-        script(src='vendor/jquery-easing/jquery.easing.min.js')
         script(src='/vendor/bootstrap/js/bootstrap.bundle.min.js')
-        script(src='js/grayscale.min.js')
 
