added about page, last updated string

--- a/views/partials/welcome_new.pug
+++ b/views/partials/welcome_new.pug
@@ -1,11 +1,13 @@
 if user
     li.nav-item.active
-        a.nav-link(href='/emails/send') Email
+        a.nav-link(href='/about') About
     li.nav-item.active
         a.nav-link(href='/users/preferences') Preferences
     li.nav-item.active
         a.nav-link(href='/users/logout') Logout
 else
+    li.nav-item.active
+        a.nav-link(href='/about') About
     li.nav-item.active
         a.nav-link(href='/users/login') Login
     li.nav-item.active
