--- a/views/summary.pug
+++ b/views/summary.pug
@@ -132,7 +132,7 @@ html(lang='en')
                         h3 What does each category mean?
                         p.lead
                             | See more on our
-                            a.d-inline(href='/dashboard')  About page
+                            a.d-inline(href='/about')  About page
                             |.
 
         // Footer
@@ -142,28 +142,20 @@ html(lang='en')
                     .col-lg-6.h-100.text-center.text-lg-left.my-auto
                         ul.list-inline.mb-2
                             li.list-inline-item
-                                a(href='#page-top') About
+                                a(href='/dashboard') Home
                             li.list-inline-item ⋅
                             li.list-inline-item
-                                a(href='#page-top') Contact
-                            li.list-inline-item ⋅
-                            li.list-inline-item
-                                a(href='#page-top') Terms of Use
-                            li.list-inline-item ⋅
-                            li.list-inline-item
-                                a(href='#page-top') Privacy Policy
-                        p.text-muted.small.mb-4.mb-lg-0 These buttons are currently just placeholders
+                                a(href='/about') About
+                        p.text-muted.small.mb-0 All data and information obtained from the Environmental Protection Authority Victoria.
+                        p.text-muted.small.mb-4.mb-lg-0 Website template obtained from StartBootstrap.
                     .col-lg-6.h-100.text-center.text-lg-right.my-auto
                         ul.list-inline.mb-0
                             li.list-inline-item.mr-3
-                                a(href='#page-top')
+                                a(href='https://www.facebook.com/EPAVictoria/')
                                     i.fab.fa-facebook.fa-2x.fa-fw
                             li.list-inline-item.mr-3
-                                a(href='#page-top')
+                                a(href='https://twitter.com/EPA_Victoria')
                                     i.fab.fa-twitter-square.fa-2x.fa-fw
-                            li.list-inline-item
-                                a(href='#page-top')
-                                    i.fab.fa-instagram.fa-2x.fa-fw
         // Bootstrap core JavaScript
         script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js")
         script(src='/vendor/jquery/jquery.min.js')
