--- a/views/index.pug
+++ b/views/index.pug
@@ -21,6 +21,11 @@ html(lang='en')
     link(href='/css/landing-page.min.css', rel='stylesheet')
     script(type = 'text/javascript').
       getSiteSummary();
+      $(document).keypress(function (e) {
+        if (e.which == 13) {
+          convert_postcode();
+        }
+      });
   body#page-top
 
     //Nav bar should be pretty consistent, its now in layout template too
@@ -41,12 +46,11 @@ html(lang='en')
             h1.mb-5(style={color:'#495057'}) Get a live Air Quality report for your area!
             include ./partials/messages
           .col-md-10.col-lg-8.col-xl-7.mx-auto
-            form
               .form-row
                 .col-12.col-md-9.mb-2.mb-md-0
-                  input#whatsup.form-control.form-control-md(type='text', placeholder='Enter your postcode...')
+                  input#whatsup.form-control.form-control-md(type='text', placeholder='Enter your postcode or suburb . . .')
                 .col-12.col-md-3
-                  button.btn.btn-block.btn-md.text-black(type='button',style={'background-color':'#b8daff'}, onclick='convert_postcode()') Show me!
+                  button#enter.btn.btn-block.btn-md.text-black(type='button',style={'background-color':'#b8daff'}, onclick='convert_postcode()') Show me!
     // Icons Grid
     section.features-icons.bg-light.text-center
       .container
