--- a/views/summary.pug
+++ b/views/summary.pug
@@ -17,6 +17,12 @@ html(lang='en')
         link(href='https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic', rel='stylesheet', type='text/css')
         // Custom styles for this template
         link(href='/css/landing-page.min.css', rel='stylesheet')
+        script(type = 'text/javascript').
+            $(document).keypress(function (e) {
+                if (e.which == 13) {
+                    convert_postcode();
+                }
+            });
     body#page-top
         nav#mainNav.navbar.navbar-expand-sm.bg-light.navbar-light.justify-content-end.fixed-top
             a.mr-auto.mr-1.navbar-brand(href='/') Inhalert
@@ -31,15 +37,14 @@ html(lang='en')
             .container
                 .row
                     .col-xl-8.mx-auto
-                        h3.mb-3(style={color:'#495057'}) Enter your postcode to get summary closest to you!
+                        h3.mb-3(style={color:'#495057'}) Enter your postcode or suburb to get a local summary!
                         include ./partials/messages
                     .col-md-10.col-lg-8.col-xl-7.mx-auto
-                        form
                             .form-row
                                 .col-12.col-md-9.mb-2.mb-md-0
                                     input#whatsup.form-control.form-control-md(type='text', placeholder='Enter your postcode...')
                                 .col-12.col-md-3
-                                    button.btn.btn-block.btn-md.text-black(type='button', style={'background-color':'#b8daff'}, onclick='convert_postcode()') Show me!
+                                    button#enter.btn.btn-block.btn-md.text-black(type='button', style={'background-color':'#b8daff'}, onclick='convert_postcode()') Show me!
         // Icons Grid
         section.features-icons.bg-light.text-center
             .container
