Added account deletion and update, and tests for both

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -16,7 +16,11 @@ html
         #navbarSupportedContent.collapse.navbar-collapse.flex-grow-0
           ul.navbar-nav.text-right
             li.nav-item.active
-              a.nav-link(href='/emails/send') Email
+              a.nav-link(href='/about') About
+            li.nav-item.active
+              a.nav-link(href='/users/account') Account
+            li.nav-item.active
+              a.nav-link(href='/users/preferences') Preferences
             li.nav-item.active
               a.nav-link(href='/users/logout') Logout
 
