--- a/views/partials/welcome_new.pug
+++ b/views/partials/welcome_new.pug
@@ -2,6 +2,8 @@ if user
     li.nav-item.active
         a.nav-link(href='/about') About
     li.nav-item.active
+        a.nav-link(href='/users/account') Account
+    li.nav-item.active
         a.nav-link(href='/users/preferences') Preferences
     li.nav-item.active
         a.nav-link(href='/users/logout') Logout
